--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Oriade's Recipes</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <div id="header">
+
     <h1>Oriade's Meal Recipes</h1>
+    
+    </div>
     <h2><img src="recimg/cook.jpg" alt="a chef cooking" style="height:400px;width:500px;"></h2>
-    <h3>Our collection</h3>
+    <h3 class="title">Our collection</h3>
     <ul>
     <li><a href="recipes/tastybeans.html">Tasty beans</a></li>
     <li><a href="recipes/jollofrice.html">Jollof rice</a></li>
