add new classes and ids to page, also add ingredient header

--- a/recipes/tastybeans.html
+++ b/recipes/tastybeans.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Tasty Beans</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-
 <body>
-    <h1><centre><img src="../recimg/tastybeans.jpg" alt="Tasty beans served on a white surface" style="height:300px;width:350px;"></centre></h1>
-    <h2>Tasty beans</h2>
+    <div>
+    <h1 class="bean_img"><img src="../recimg/tastybeans.jpg" alt="Tasty beans served on a white surface" style="height:300px;width:350px;"></h1>
+    </div>
+    <h2 class="beans">Tasty beans</h2>
     <p>Nigerian tasty beans, also known as stewed beans, is a dietary staple in many households in the country. It is called “ewa riro” in Yoruba or sometimes just referred to as “ewa”, which means beans. It is similar to the Ghanaian “red red” and is perfect for vegetarians.</p>
+    <h3 class="bean_ing">Ingredients</h3> 
         <ul>
             <li>5 cups of beans</li>
             <li>1 cup of Sliced onions</li>
@@ -21,7 +24,7 @@
             <li>Salt to taste</li>
             <p>serving: 6</p>
         </ul>    
-    <h3>Steps</h3>
+    <h3 class="bean_steps">Steps</h3>
         <ol>
             <li>Start by picking the beans. Pick to separate sand and impurities from the beans, remove every unwanted material from the beans. That is just the essence of picking the beans. Nigerian beans come mixed with some unwanted materials.</li>
             <li>Parboil the picked beans for three to five minutes before following with the rest of the procedures. Just add to boiling water, cook for three to five minutes then wash and set aside in a bowl.
@@ -33,6 +36,10 @@
             <li>Add about a cup of water if the water is already dried, add the ground crayfish, stock cube, fried tomatoes/peppers. Add salt and pepper to taste.</li>
             <li>Cover and cook for another ten minutes, and you are done with the making of my favorite bean’s recipe.</li>
         </ol>
-
+    <h4 class="goto_bean">Go to:</h4>
+<ul>
+    <li><a href="jollofrice.html">Jollof rice recipe</a></li>
+    <li><a href="spag.html">Spaghetti bolognese recipe</a></li>
+</ul>   
 </body>
 </html>
