style the spag page and make it link to other recipe pages

--- a/recipes/spag.html
+++ b/recipes/spag.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Spaghetti bolognese</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-<h1><img src="../recimg/spag_bolognese.jpg" alt="spaghetti bolognese" style="height:300px;width:350px;"></h1>
-<h2>Spaghetti bolognese</h2>
+<div>
+<h1 class="spag_img"><img src="../recimg/spag_bolognese.jpg" alt="spaghetti bolognese" style="height:300px;width:350px;"></h1>
+<h2 id="spag">Spaghetti bolognese</h2>
+</div>
     <p>Spaghetti bolognese is just in the name – spaghetti tossed in a sauce made from tomatoes, minced beef, garlic, wine, herbs, and spices. It is a classic Italian dish that has some American roots.</p>
-<h3>Ingredients</h3>
+<h3 class="spag_ing">Ingredients</h3>
     <ul>
         <li>2 tbsp olive oil</li>
         <li>400g/14oz beef mince</li>
@@ -22,7 +25,7 @@
         <li>salt and pepper</li>
     </ul>        
     <p>Serving: 4</p>
-<h4>Steps</h4>
+<h4 class="spag_steps">Steps</h4>
     <ol>
         <li>Heat a large saucepan over a medium heat. Add a tablespoon of olive oil and once hot add the beef mince and a pinch of salt and pepper.</li>
         <li>Cook the mince until well browned over a medium-high heat (be careful not to burn the mince. It just needs to be a dark brown colour). Once browned, transfer the mince to a bowl and set aside.</li>
@@ -32,5 +35,10 @@
         <li>When ready to cook the spaghetti, heat a large saucepan of water and add a pinch of salt. Cook according to the packet instructions.</li>
         <li>Once the spaghetti is cooked through, drain and add to the pan with the bolognese sauce. Mix well and serve.</li>
     </ol>
+<h4 class="goto_spag">Go to:</h4>
+    <ul>
+        <a href="tastybeans.html"><li>Tasty beans recipe</li></a>
+       <a href="jollofrice.html"><li>Jollof rice recipe</li></a>
+    </ul>
 </body>
 </html>
