style the jollof page and make it link to other recipe pages

--- a/recipes/jollofrice.html
+++ b/recipes/jollofrice.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Jollof rice</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1><img src="../recimg/jollofrice.jpg" alt="Jollof rice served in a white plate" style="height:300px;width:350px;"></h1>
-    <h2>Jollof rice</h2>
+    <div>
+    <h1 id="jollof_img"><img src="../recimg/jollofrice.jpg" alt="Jollof rice served in a white plate" style="height:300px;width:350px;"></h1>
+    </div>
+    <h2 class="jollof">Jollof rice</h2>
     <p>For those of you who aren’t familiar with Jollof Rice (Jellof rice) —it is a rich and incredibly rich, aromatic, tasty West African one-pot Meal. It’s similar to Jambalaya but with distinctive African spices. 
         It consists mainly of cooked rice and tomato stew flavored with spices such as thyme, scotch bonnet pepper, onions, and garlic.</p>
+    <h3 class="jollof_ing">Ingredients</h3>
         <ul>
             <li>5 medium sized Roma tomatoes, roughly chopped</li>
             <li>1 red bell pepper, roughly chopped</li>
@@ -27,7 +31,7 @@
             <li>Water, as needed</li>
         </ul>
     <p>Serving: 2</p>
-    <h3>Steps</h3>
+    <h3 class="jollof_steps">Steps</h3>
         <ol>
             <li>Blend your tomatoes, red pepper, scotch bonnet peppers in a food processor or blender for about 45 seconds, make sure that everything is blended well.</li>
             <li>In a medium sized pot, heat your oil on medium-high heat. Once the oil is heated add the onions you set aside and fry just until they turn golden brown. Once the onions, have turned brown in color add the tomato paste and fry for 2-3 minutes</li>
@@ -37,5 +41,10 @@
             <li>When the liquid has almost dried up add the remaining tomato stew, cover, and let it cook for another 5-10 minutes heat until the liquid has completely dried up.</li>
             <li>Turn off the heat, mix thoroughly, and your Jollof Rice is ready to be eaten!</li>
         </ol>
+    <h3 class="goto_jollof">Go to:</h3>
+        <ul>
+            <a><li>Spaghetti bolognese recipe</li></a>
+            <a><li>Tasty beans recipe</li></a>
+        </ul>
 </body>
 </html>
