fix link to other recipe pages

--- a/recipes/jollofrice.html
+++ b/recipes/jollofrice.html
@@ -43,8 +43,8 @@
         </ol>
     <h3 class="goto_jollof">Go to:</h3>
         <ul>
-            <a><li>Spaghetti bolognese recipe</li></a>
-            <a><li>Tasty beans recipe</li></a>
+            <a href="spag.html"><li>Spaghetti bolognese recipe</li></a>
+            <a href="tastybeans.html"><li>Tasty beans recipe</li></a>
         </ul>
 </body>
 </html>
